# TSBot

./: .dockerignore  .env.example  .env.production.example  .gitignore  .~Source.docx  BACKEND_SETUP.md  BÁO_CÁO_TOÀN_DIỆN_TSBOT.md  FRONTEND_SETUP.md  QUICKSTART.md  README.md  START_HERE.md  Source.docx  TestCase.xlsx  check_setup.sh  deploy.sh  pyproject.toml  quickstart.sh  readme.md  test_vllm.py  tsbot_backup.sql
data/: few_shot_sql.json
data/documents/: .gitkeep
data/evaluation/: golden_dataset.json
data/intents/: .gitkeep
data/sql_examples/: .gitkeep
docker/: .dockerignore  Dockerfile  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml  nginx-entrypoint.sh  nginx.conf  vllm-a100.sh
docker/init-scripts/: 01-extensions.sql  02-views.sql  03-indexes.sql
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/.ui-design/: design-system.json
frontend/.ui-design/tokens/: tokens.css  tokens.ts
frontend/src/: App.tsx
frontend/src/data/: mock-users.ts
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: api.ts  config.ts
frontend/src/pages/: AboutPage.tsx  ChatPage.tsx  ContactPage.tsx  FAQPage.tsx  LandingPage.tsx
frontend/src/services/: adminService.ts  chatService.ts
frontend/src/stores/: adminStore.ts  (+2 more)
output_admission/: chunks.json
scripts/: __init__.py  import_dataset_from_excel.py  index_documents.py  index_few_shot_sql.py  process_legal_docs.py  run_evaluation.py  seed_data.py  setup-ssl.sh  setup_database.py
src/: __init__.py
src/admin/: __init__.py
src/agents/: __init__.py  rag_agent.py  sql_agent.py  supervisor.py
src/api/: __init__.py  _limiter.py  admin.py  analytics.py  chat.py  main.py
src/core/: __init__.py  config.py  embeddings.py  llm.py  prediction.py
src/database/: __init__.py  models.py  postgres.py  qdrant.py
src/evaluation/: __init__.py  dataset_loader.py  evaluator.py  ollama_adapter.py  reporter.py
src/routers/: __init__.py  semantic_router.py
src/utils/: __init__.py  chunking.py  docx_chunker.py  vietnamese.py
tests/: __init__.py  conftest.py  test_advanced_rag.py
tests/test_api/: test_health.py
(+56 files in other folders)
